# app/Filament/Resources/RequestsResource.php
@@ -1,0 +1,91 @@
+<?php
+
+namespace App\Filament\Resources;
+
+use App\Filament\Resources\RequestsResource\Pages;
+use App\Filament\Resources\RequestsResource\RelationManagers;
+use App\Models\Requests;
+use Filament\Forms;
+use Filament\Forms\Form;
+use Filament\Resources\Resource;
+use Filament\Tables;
+use Filament\Tables\Table;
+use Illuminate\Database\Eloquent\Builder;
+use Illuminate\Database\Eloquent\SoftDeletingScope;
+
+class RequestsResource extends Resource
+{
+    protected static ?string $model = Requests::class;
+
+    protected static ?string $navigationIcon = 'heroicon-o-rectangle-stack';
+
+    public static function form(Form $form): Form
+    {
+        return $form
+            ->schema([
+                Forms\Components\TextInput::make('identification'),
+                Forms\Components\TextInput::make('amout')
+                    ->numeric(),
+                Forms\Components\TextInput::make('quotas')
+                    ->numeric(),
+                Forms\Components\TextInput::make('total')
+                    ->numeric(),
+                Forms\Components\TextInput::make('status'),
+            ]);
+    }
+
+    public static function table(Table $table): Table
+    {
+        return $table
+            ->columns([
+                Tables\Columns\TextColumn::make('identification')
+                    ->searchable(),
+                Tables\Columns\TextColumn::make('amout')
+                    ->numeric()
+                    ->sortable(),
+                Tables\Columns\TextColumn::make('quotas')
+                    ->numeric()
+                    ->sortable(),
+                Tables\Columns\TextColumn::make('total')
+                    ->numeric()
+                    ->sortable(),
+                Tables\Columns\TextColumn::make('status')
+                    ->searchable(),
+                Tables\Columns\TextColumn::make('created_at')
+                    ->dateTime()
+                    ->sortable()
+                    ->toggleable(isToggledHiddenByDefault: true),
+                Tables\Columns\TextColumn::make('updated_at')
+                    ->dateTime()
+                    ->sortable()
+                    ->toggleable(isToggledHiddenByDefault: true),
+            ])
+            ->filters([
+                //
+            ])
+            ->actions([
+                Tables\Actions\EditAction::make(),
+            ])
+            ->bulkActions([
+                Tables\Actions\BulkActionGroup::make([
+                    Tables\Actions\DeleteBulkAction::make(),
+                ]),
+            ]);
+    }
+
+    public static function getRelations(): array
+    {
+        return [
+            //
+        ];
+    }
+
+    public static function getPages(): array
+    {
+        return [
+            'index' => Pages\ListRequests::route('/'),
+            'create' => Pages\CreateRequests::route('/create'),
+            'edit' => Pages\EditRequests::route('/{record}/edit'),
+        ];
+    }
+}
