# app/Http/Controllers/RequestsController.php
@@ -41,10 +41,56 @@ class RequestsController extends Controller
      */
     public function index()
     {
-        $patents = Requests::with('movements')->get();
-        return response()->json(["data"=>$patents],200);
+        $requests = Requests::with('movements')->get();
+        return response()->json(["data"=>$requests],200);
     }
 
+     /**
+     * @OA\Get (
+     *     path="/api/requests/user/{id}",
+     *     operationId="watch_request_by_user",
+     *     tags={"Requests"},
+     *     security={{ "apiAuth": {} }},
+     *     summary="See request",
+     *     description="See request",
+     *    @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="id", type="number", example=1),
+     *              @OA\Property(property="identification", type="numeric", example=""),
+     *              @OA\Property(property="amount", type="numeric", example=""),
+     *              @OA\Property(property="quotas", type="numeric", example=""),
+     *              @OA\Property(property="total", type="numeric", example=""),
+     *              @OA\Property(property="status", type="string", example=""),
+     *              @OA\Property(property="created_at", type="string", example="2023-02-23T00:09:16.000000Z"),
+     *              @OA\Property(property="updated_at", type="string", example="2023-02-23T12:33:45.000000Z")
+     *         )
+     *     ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="NOT FOUND",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example=""),
+     *          )
+     *      )
+     * )
+     */
+
+     public function byIdentification($identification){
+        try{
+            $request = Requests::with('movements')->where("identification", $identification)->get();
+            return response()->json(["data"=>$request],200);
+        }catch (Exception $e) {
+            return response()->json(["data"=>"none"],200);
+        }
+    }
 
      /**
      * @OA\Get (
@@ -52,8 +98,8 @@ class RequestsController extends Controller
      *     operationId="watch_applicants",
      *     tags={"Requests"},
      *     security={{ "apiAuth": {} }},
-     *     summary="See applicant",
-     *     description="See applicant",
+     *     summary="See request",
+     *     description="See request",
      *    @OA\Parameter(
      *         in="path",
      *         name="id",
@@ -86,8 +132,8 @@ class RequestsController extends Controller
 
     public function watch($id){
         try{
-            $applicant = Requests::with('movements')->find($id);
-            return response()->json(["data"=>$applicant],200);
+            $request = Requests::with('movements')->find($id);
+            return response()->json(["data"=>$request],200);
         }catch (Exception $e) {
             return response()->json(["data"=>"none"],200);
         }
@@ -99,12 +145,11 @@ class RequestsController extends Controller
      *      operationId="store_applicants",
      *      tags={"Requests"},
      *      security={{ "apiAuth": {} }},
-     *      summary="Store applicant",
-     *      description="Store applicant",
+     *      summary="Store request",
+     *      description="Store request",
      *      @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *            required={"naidentificationme"},
      *              @OA\Property(property="identification", type="numeric", example="40237252669"),
      *              @OA\Property(property="amount", type="numeric", example="10000"),
      *              @OA\Property(property="quotas", type="numeric", example="4"),
@@ -124,12 +169,9 @@ class RequestsController extends Controller
 
     public function register(Request $request)
     {
-        $applicant = new Requests(request()->all());
-        $applicant->save();
-        if (isset($request->kid_id)) {
-            $applicant->kids()->attach(['kid_id' => $request->kid_id]);
-        }
-        return response()->json(["data"=>$applicant],200);
+        $request = new Requests(request()->all());
+        $request->save();
+        return response()->json(["data"=>$request],200);
     }
 
     /**
@@ -138,8 +180,8 @@ class RequestsController extends Controller
      *     operationId="update_applicants",
      *     tags={"Requests"},
      *     security={{ "apiAuth": {} }},
-     *     summary="Update applicant",
-     *     description="Update applicant",
+     *     summary="Update request",
+     *     description="Update request",
      *     @OA\Parameter(
      *         in="path",
      *         name="id",
@@ -149,7 +191,6 @@ class RequestsController extends Controller
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *            required={"identification"},
      *              @OA\Property(property="identification", type="numeric", example="40237252669"),
      *              @OA\Property(property="amount", type="numeric", example="10000"),
      *              @OA\Property(property="quotas", type="numeric", example="4"),
@@ -169,10 +210,10 @@ class RequestsController extends Controller
 
     public function update(Request $request, $id){
         try{
-            $applicant = Requests::where('id',$id)->first();
-            $applicant->update($request->all());
+            $request = Requests::where('id',$id)->first();
+            $request->update($request->all());
             if (isset($request->kid_id)) {
-                $applicant->kids()->attach(['kid_id' => $request->kid_id]);
+                $request->kids()->attach(['kid_id' => $request->kid_id]);
             }
             return response()->json(["data"=>"ok"],200);
         }catch (Exception $e) {
@@ -186,8 +227,8 @@ class RequestsController extends Controller
      *      operationId="delete_applicants",
      *      tags={"Requests"},
      *     security={{ "apiAuth": {} }},
-     *      summary="Delete applicant",
-     *      description="Delete applicant",
+     *      summary="Delete request",
+     *      description="Delete request",
      *    @OA\Parameter(
      *         in="path",
      *         name="id",
